# gateway-switcher

./: .gitignore  GatewaySwitcher.sln  README.md  build.py  pyproject.toml  run.py  setup.py
GatewaySwitcher/: App.xaml  App.xaml.cs  GatewaySwitcher.csproj  app.manifest
GatewaySwitcher/Helpers/: Converters.cs  IconHelper.cs  RelayCommand.cs
GatewaySwitcher/Models/: NetworkProfile.cs  ProfileCollection.cs
GatewaySwitcher/Resources/: IconGenerator.ps1
GatewaySwitcher/Services/: NetworkConfigurationService.cs  ProfileManager.cs  ProxyConfigurationService.cs
GatewaySwitcher/ViewModels/: BaseViewModel.cs  MainViewModel.cs
GatewaySwitcher/Views/: MainWindow.xaml  MainWindow.xaml.cs  PasswordDialog.xaml  PasswordDialog.xaml.cs  ProfileEditorWindow.xaml  ProfileEditorWindow.xaml.cs
gateway_switcher/: __init__.py  main.py
gateway_switcher/models/: __init__.py  profile.py
gateway_switcher/services/: __init__.py  network_service.py  profile_manager.py  proxy_service.py  route_service.py
gateway_switcher/ui/: __init__.py  main_window.py  password_dialog.py  profile_editor.py  route_rules_editor.py  styles.py  system_tray.py
gateway_switcher/utils/: __init__.py  admin.py
